# compress-opencl-amd

./: .gitignore  CMakeLists.txt  README.md  compressed.bin.cpr.xz  gen_unify.cpp  report.txt  report_cl.txt  solve.cl
data/cl/: compress.sh  report.txt  test.cl
data/cl/solve-gfx101/: kernel-gfx1010.bin.orig.bc  kernel-gfx1011.bin.orig.bc  kernel-gfx1012.bin.orig.bc  kernel-gfx1013.bin.orig.bc
data/cl/solve-gfx103/: compile.sh  kernel-gfx1030.bin.bz2  kernel-gfx1030.bin.lzma  kernel-gfx1030.bin.xz  kernel-gfx1030.bin.zst  kernel-gfx1031.bin.bz2  kernel-gfx1031.bin.lzma  kernel-gfx1031.bin.xz  kernel-gfx1031.bin.zst  kernel-gfx1032.bin.bz2  kernel-gfx1032.bin.lzma  kernel-gfx1032.bin.xz  kernel-gfx1032.bin.zst  kernel-gfx1033.bin.bz2  kernel-gfx1033.bin.lzma  kernel-gfx1033.bin.xz  kernel-gfx1033.bin.zst  kernel-gfx1034.bin.bz2  kernel-gfx1034.bin.lzma  kernel-gfx1034.bin.xz  kernel-gfx1034.bin.zst  kernel-gfx1035.bin.bz2  kernel-gfx1035.bin.lzma  kernel-gfx1035.bin.xz  kernel-gfx1035.bin.zst  kernel-gfx1036.bin.bz2  kernel-gfx1036.bin.lzma  kernel-gfx1036.bin.xz  kernel-gfx1036.bin.zst
data/cl/solve-gfx600/: kernel-gfx600.bin.orig.bc  kernel-gfx601.bin.orig.bc  kernel-gfx602.bin.orig.bc
data/cl/solve-gfx700/: kernel-gfx700.bin.orig.bc  kernel-gfx701.bin.orig.bc  kernel-gfx702.bin.orig.bc  kernel-gfx703.bin.orig.bc  kernel-gfx704.bin.orig.bc  kernel-gfx705.bin.orig.bc
data/cl/solve-gfx800/: kernel-gfx800.bin.orig.bc  (+4 more)
data/cpp/: compile.sh
src/: CMakeLists.txt  compress.h  decompress.cl  solution.cpp  unify.cpp  unify.h
test/: CMakeLists.txt  compress_test.cc
(+761 files in other folders)
